@@ -205,7 +205,7 @@ func (eeC *EventExporterCfg) loadFromJsonCfg(jsnEec *EventExporterJsonCfg, separ
 			case utils.MetaTrl:
 				eeC.trailerFields = append(eeC.trailerFields, field)
 			}
-			if strings.HasPrefix(field.GetPathSlice()[0], utils.MetaCache) { // special cache when loading fields that contains *cache in path
+			if strings.HasPrefix(field.GetPathSlice()[0], utils.MetaUCH) { // special cache when loading fields that contains *uch in path
 				eeC.contentFields = append(eeC.contentFields, field)
 			}
 		}
