@@ -71,6 +71,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [SessionS] Use correctly SessionTTLUsage when calculate end usage in case of terminate session from ttl mechanism
   * [SessionS] Add SessionTLLLastUsage as option for an extra debit in case of ttl mechanism
   * [LoaderS] Add *req as mandatory prefix
+  * [AgentS] Rename prefix from *cache to *uch
 
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
